kubernetes/apps/evilginx2/evilginx2/app/evilginx2-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evilginx2
  namespace: evilginx2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evilginx2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: evilginx2
    spec:
      containers:
        - name: evilginx2
          image: warhorse/evilginx2:latest
          ports:
            - containerPort: 53
              protocol: UDP
            - containerPort: 80
              protocol: TCP
            - containerPort: 443
              protocol: TCP
          volumeMounts:
            - name: phishlets-pvc
              mountPath: /phishlets/example.yaml
              subPath: example.yaml
      volumes:
        - name: phishlets-pvc
          persistentVolumeClaim:
            claimName: phishlets-pvc
        - name: phishlets-cm
          configMap:
            name: phishlets-cm
