kubernetes/apps/evilginx2/evilginx2/app/evilginx2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  # annotations:
  # External DNS Annotations
  # external-dns.alpha.kubernetes.io/hostname: evilginx2.techvomit.xyz
  name: evilginx2
  namespace: evilginx2
spec:
  ports:
    - name: dns
      port: 53
      protocol: UDP
    - name: http
      port: 80
      protocol: TCP
    - name: https
      port: 443
      protocol: TCP
  selector:
    app: evilginx2
