kubernetes/apps/evilginx2/evilginx2/app/evilginx2-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evilginx2
  namespace: evilginx2
spec:
  ingressClassName: ingress-traefik
  rules:
    - host: &host evilginx2.techvomit.xyz
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: evilginx2
                port:
                  number: 443
            path: "/"
  tls:
    - hosts:
        - *host
      secretName: techvomit-xyz-production-tls
